# termo

./: .envrc  .gitignore  Taskfile.yml  environment.yml  pyproject.toml
src/: teRMo.py
src/termo/: __init__.py  main.py
src/termo/ble/: service.py  tp357.py
src/termo/cli/: __init__.py  __main__.py  cli.py
src/termo/cli/commands/: __init__.py  ble.py
src/termo/core/: __init__.py  config.py  thread.py
src/termo/ui/: app.py  icons.py  models.py
src/termo/ui/items/: actions.py  info.py
