
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [
  {name = "jobs", email = "alex@cacko.net"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "A small jobs package"
name = "jobs"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
	"annotated-types>=0.6.0",
	"anyio>=3.7.1",
	"appdirs>=1.4.4",
	"autoflake8>=0.4.1",
	"autopep8>=2.0.4",
	"better-exceptions>=0.3.3",
	"boto3>=1.28.77",
	"build>=1.0.3",
	"CacheControl>=0.13.1",
	"cachetools>=5.3.2",
	"certifi>=2023.7.22",
	"cffi>=1.16.0",
	"charset-normalizer>=3.3.2",
	"click>=8.1.7",
	"colorama>=0.4.6",
	"corefile>=0.1.5",
	"coreimage>=0.0.93",
	"corelog>=0.0.12",
	"corestring>=0.1.22",
	"cryptography>=41.0.5",
	"emoji>=2.8.0",
	"et-xmlfile>=1.1.0",
	"fastapi>=0.104.1",
	"filetype>=1.2.0",
	"firebase-admin>=6.4.0",
	"flake8>=6.1.0",
	"fs>=2.4.16",
	"fuzzelinho>=0.2.6",
	"google-api-core>=2.17.1",
	"google-api-python-client>=2.118.0",
	"google-auth>=2.27.0",
	"google-auth-httplib2>=0.2.0",
	"google-cloud-core>=2.4.1",
	"google-cloud-firestore>=2.14.0",
	"google-cloud-storage>=2.14.0",
	"google-crc32c>=1.5.0",
	"google-resumable-media>=2.7.0",
	"googleapis-common-protos>=1.62.0",
	"h11>=0.14.0",
	"httplib2>=0.22.0",
	"httptools>=0.6.1",
	"humanfriendly>=10.0",
	"idna>=3.4",
	"jmespath>=1.0.1",
	"Levenshtein>=0.23.0",
	"markdown-it-py>=3.0.0",
	"mccabe>=0.7.0",
	"mdurl>=0.1.2",
	"msgpack>=1.0.7",
	"numpy>=1.26.1",
	"olefile>=0.46",
	"opencv-python>=4.8.1.78",
	"openpyxl>=3.1.2",
	"packaging>=23.2",
	"pandas>=2.1.2",
	"peewee>=3.17.0",
	"Pillow>=9.5.0",
	"prompt-toolkit>=3.0.36",
	"proto-plus>=1.22.3",
	"protobuf<4,>=3.11",
	"psycopg2-binary>=2.9.9",
	"pyasn1>=0.5.0",
	"pyasn1-modules>=0.3.0",
	"pycodestyle>=2.11.1",
	"pycountry>=22.3.5",
	"pycparser>=2.21",
	"pydantic>=2.4.2",
	"pydantic_core>=2.10.1",
	"pyfiglet>=1.0.2",
	"pyflakes>=3.1.0",
	"Pygments>=2.16.1",
	"PyJWT>=2.8.0",
	"pyparsing>=3.1.1",
	"pypdfium2>=4.23.1",
	"pyproject_hooks>=1.0.0",
	"python-dateutil>=2.8.2",
	"python-dotenv>=1.0.0",
	"python-multipart>=0.0.6",
	"python-slugify>=8.0.1",
	"pytz>=2023.3.post1",
	"PyYAML>=6.0.1",
	"questionary>=2.0.1",
	"rapidfuzz>=3.5.2",
	"requests>=2.31.0",
	"rich>=13.6.0",
	"s3transfer>=0.7.0",
	"segno>=1.5.3",
	"semver>=3.0.2",
	"six>=1.16.0",
	"sniffio>=1.3.0",
	"starlette>=0.27.0",
	"stringcase>=1.2.0",
	"structlog>=23.2.0",
	"term-image>=0.8.0.dev0",
	"text-unidecode>=1.3",
	"typer>=0.9.0",
	"typing_extensions>=4.8.0",
	"tzdata>=2023.3",
	"Unidecode>=1.3.7",
	"uritemplate>=4.1.1",
	"uvicorn>=0.23.2",
	"uvloop>=0.19.0",
	"watchfiles>=0.21.0",
	"wcwidth>=0.2.9",
	"websockets>=12.0",
]

[project.scripts]
jobs-cli = "jobs.cli:cli"

[tool.setuptools.dynamic]
version = {attr = "jobs.__version__"}
